--- a/lingoappTcc/app/src/main/res/layout/activity_editar_ativ.xml
+++ b/lingoappTcc/app/src/main/res/layout/activity_editar_ativ.xml
@@ -204,7 +204,7 @@
 
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_editar"
         android:layout_width="120dp"
         android:layout_height="64dp"
         android:layout_marginStart="73dp"
@@ -241,7 +241,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/btn_editar"
         tools:ignore="OnClick" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
